implement most of the vfclustercheck