@@ -5,7 +5,6 @@ import org.apache.commons.lang3.SerializationUtils;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import ru.cyberc3dr.project.Main;
-import ru.cyberc3dr.project.model.ARM;
 import ru.cyberc3dr.project.model.DataCenter;
 import ru.cyberc3dr.project.model.Rule;
 import ru.cyberc3dr.project.model.VCluster;
@@ -42,7 +41,9 @@ public final class AlgorithmOneExecutor {
                 .filter(combo -> {
                     var rules = dataCenter.generateRules(combo);
 
-                    return vfClusterCheck(frames, rules);
+                    vfClusterCheck(combo, rules);
+
+                    return true; // TODO
                 })
                 .map(combo -> {
                     var signals = applicableSignals.stream()
@@ -63,7 +64,11 @@ public final class AlgorithmOneExecutor {
     }
 
     public boolean vfClusterCheck(@NotNull Set<String> frames, Set<Rule> rules) {
-        var disps = new HashSet<String>();
+        if (frames.size() < 2) return true;
+
+        logger.info("Testing vfCluster: {}", frames);
+
+        var disps = new Stack<String>();
 
         var appliedRules = new HashSet<Rule>();
 
@@ -75,29 +80,57 @@ public final class AlgorithmOneExecutor {
             var displays = rule.getDisplays();
 
             if(displays.size() == 1) {
-                disps.addAll(displays);
+                displays.forEach(disps::push);
 
                 appliedRules.add(rule);
             }
         }
 
-        if(!disps.isEmpty()) {
-            var d = rules.stream().map(Rule::getDisplays)
-                    .collect(Collectors.toSet());
+        logger.info("Stack");
+        disps.forEach(disp -> logger.info(" - {}", disp));
 
-            var combos = Sets.combinations(d, 2)
+        if(!disps.isEmpty()) {
+            var combos = Sets.combinations(rules, 2)
                     .stream()
                     .map(List::copyOf)
                     .collect(Collectors.toSet());
 
-            var hasIntersection = combos.stream().anyMatch(
-                    combo -> !Sets.intersection(combo.getFirst(), combo.get(1)).isEmpty());
+            var conflicts = combos.stream()
+                    .filter(combo -> {
+                        var rule1 = combo.get(0);
+                        var rule2 = combo.get(1);
 
-            if(!hasIntersection) {
+                        var intersection = Sets.intersection(rule1.getDisplays(), rule2.getDisplays());
+
+                        return !intersection.isEmpty();
+                    })
+                    .collect(Collectors.toSet());
+
+            if(conflicts.isEmpty()) {
                 rules.removeAll(appliedRules);
                 appliedRules.clear();
 
+                rules.forEach(rule -> disps.forEach(rule.getDisplays()::remove));
 
+                rules.forEach(rule -> {
+                    logger.info("After cleaning:");
+                    logger.info("{} {}", rule.getVideoframe(), rule.getDisplays());
+                });
+
+                if(rules.stream().anyMatch(rule -> rule.getDisplays().isEmpty())) {
+                    logger.info("Some rules have no displays left after assignment.");
+
+                    return false;
+                }
+            } else {
+                logger.info("Conflicts:");
+                conflicts.forEach(conflict -> {
+                    var rule1 = conflict.get(0);
+                    var rule2 = conflict.get(1);
+
+                    logger.info(" - {} {} <-> {} {}", rule1.getVideoframe(), rule1.getDisplays(),
+                            rule2.getVideoframe(), rule2.getDisplays());
+                });
             }
         }
 
